--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <input id="baseUrl" type="text" placeholder="https://example.com"value="https://V05250217.lan.omniaweb.cloud" />
         </div>
         <div class="hint" id="baseUrlHint">Serve per la chiamata GET a /api/v2/export.</div>
+        <button id="resetBtn" class="primary">Reset server</button>
+        <div class="status" id="resetStatus"></div>
       </section>
 
       <section class="card">
