--- a/index.html
+++ b/index.html
@@ -62,24 +62,29 @@
           <input id="configFile" type="file" accept="application/json" />
         </div>
 
-        <button id="fetchMappingBtn" class="primary">Ottieni mapping attuale</button>
-
-        <div class="associations">
-          <h3>Associazioni servizi</h3>
-          <h5>Servizio Precedente -> Nuovo servizio</h5>
-          <div class="import-keys">
-            <h4>Chiavi da importare</h4>
-            <div id="importKeyList" class="import-key-list">
-              <div class="placeholder">Carica un config.json per selezionare le chiavi.</div>
-            </div>
-          </div>
-          <div id="associationList" class="association-list">
-            <div class="placeholder">Carica entrambi i mapping per vedere le associazioni.</div>
-          </div>
+        <div id="importLoading" class="import-loading hidden">
+          <div class="spinner" aria-hidden="true"></div>
+          <div>Caricamento mapping...</div>
         </div>
 
-        <button id="importBtn" class="primary" disabled>Invia import</button>
-        <div class="status" id="importStatus"></div>
+        <div id="importBody">
+          <div class="associations">
+            <h3>Associazioni servizi</h3>
+            <h5>Servizio Precedente -> Nuovo servizio</h5>
+            <div class="import-keys">
+              <h4>Chiavi da importare</h4>
+              <div id="importKeyList" class="import-key-list">
+                <div class="placeholder">Carica un config.json per selezionare le chiavi.</div>
+              </div>
+            </div>
+            <div id="associationList" class="association-list">
+              <div class="placeholder">Carica entrambi i mapping per vedere le associazioni.</div>
+            </div>
+          </div>
+
+          <button id="importBtn" class="primary" disabled>Invia import</button>
+          <div class="status" id="importStatus"></div>
+        </div>
       </section>
     </main>
 
