feat: update import keys from CONFIG to CHANNELS for consistency in config.json

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <section class="card">
         <h2>Import</h2>
-        <p>Carica il <span class="mono">config.json</span> con chiavi <span class="mono">CONFIG</span> e <span class="mono">MAPPING</span>. Se presenti, puoi decidere se importare anche <span class="mono">Configurazione del server</span> e <span class="mono">Informazioni della licenza</span>.</p>
+        <p>Carica il <span class="mono">config.json</span> con chiavi <span class="mono">CHANNELS</span> e <span class="mono">MAPPING</span>. Se presenti, puoi decidere se importare anche <span class="mono">Configurazione del server</span> e <span class="mono">Informazioni della licenza</span>.</p>
         <div class="field">
           <label for="configFile">config.json (vecchio server)</label>
           <input id="configFile" type="file" accept="application/json" />
