feat: add reset secret input field for server reset functionality

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
       <section class="card">
         <h2>Reset server</h2>
         <p>Ripristina il server allo stato iniziale (richiede login).<br> Almeno un utente 'admin' deve rimanere presente !</p>
+        <div class="field">
+          <label for="resetSecret">Reset secret</label>
+          <input id="resetSecret" type="password" placeholder="HYPERNODE_RESET_6A9K3M2QX7" />
+        </div>
         <button id="resetBtn" class="primary">Reset server</button>
         <div class="status" id="resetStatus"></div>
       </section>
