feat: update reset server message for clarity on user retention

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <section class="card">
         <h2>Reset server</h2>
-        <p>Ripristina il server allo stato iniziale (richiede login).<br> Almeno un utente 'admin' deve rimanere presente !</p>
+        <p>Ripristina il server allo stato iniziale (richiede login).<br>GLI UTENTI NON VENGONO RIMOSSI</p>
         <div class="field">
           <label for="resetSecret">Reset secret</label>
           <input id="resetSecret" type="password" placeholder="HYPERNODE_RESET_6A9K3M2QX7" />
