--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>GUI minimale per scaricare l'export o aggiornare un config.json.</p>
       </header>
 
-      <section class="card">
+      <section class="card" id="loginSection">
         <h2>Base URL</h2>
         <div class="field">
           <label for="baseUrl">Base URL</label>
@@ -45,14 +45,14 @@
         </div>
       </section>
 
-      <section class="card">
+      <section class="card hidden" id="exportSection">
         <h2>Export</h2>
         <p>Scarica l'export da <span class="mono">/api/v2/export</span> e salvalo dove vuoi.</p>
         <button id="exportBtn" class="primary" disabled>Scarica export</button>
         <div class="status" id="exportStatus"></div>
       </section>
 
-      <section class="card">
+      <section class="card hidden" id="resetSection">
         <h2>Reset server</h2>
         <p>Ripristina il server allo stato iniziale</p>
         <div class="field">
@@ -63,7 +63,7 @@
         <div class="status" id="resetStatus"></div>
       </section>
 
-      <section class="card">
+      <section class="card hidden" id="importSection">
         <h2>Import</h2>
         <p>Carica il <span class="mono">config.json</span> con chiavi <span class="mono">CHANNELS</span> e <span class="mono">MAPPING</span>. Se presenti, puoi decidere se importare anche <span class="mono">Configurazione del server</span> e <span class="mono">Informazioni della licenza</span>.</p>
         <div class="field">
