feat: extend import functionality with additional keys and update UI instructions

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <section class="card hidden" id="importSection">
         <h2>Import</h2>
-        <p>Carica il <span class="mono">config.json</span> con chiavi <span class="mono">CHANNELS</span> e <span class="mono">MAPPING</span>. Se presenti, puoi decidere se importare anche <span class="mono">Configurazione del server</span> e <span class="mono">Informazioni della licenza</span>.</p>
+        <p>Carica il <span class="mono">config.json</span> con chiavi <span class="mono">CHANNELS</span> e <span class="mono">MAPPING</span>. Puoi attivare o disattivare <span class="mono">SNAPSHOTS</span>, <span class="mono">RECORDINGS</span>, <span class="mono">EVENTS</span> e le altre sezioni disponibili.</p>
         <div class="field">
           <label for="configFile">config.json (vecchio server)</label>
           <input id="configFile" type="file" accept="application/json" />
