feat: add import summary section with item count and styling

--- a/index.html
+++ b/index.html
@@ -80,15 +80,19 @@
           <div class="associations">
             <h3>Associazioni servizi</h3>
             <h5>Servizio Precedente -> Nuovo servizio</h5>
-            <div class="import-keys">
-              <h4>Chiavi da importare</h4>
-              <div id="importKeyList" class="import-key-list">
-                <div class="placeholder">Carica un config.json per selezionare le chiavi.</div>
-              </div>
+          <div class="import-keys">
+            <h4>Chiavi da importare</h4>
+            <div id="importKeyList" class="import-key-list">
+              <div class="placeholder">Carica un config.json per selezionare le chiavi.</div>
             </div>
-            <div id="associationList" class="association-list">
-              <div class="placeholder">Carica entrambi i mapping per vedere le associazioni.</div>
-            </div>
+          </div>
+          <div id="importSummary" class="import-summary hidden">
+            <h4>Conteggio elementi</h4>
+            <div id="importSummaryList" class="import-summary-list"></div>
+          </div>
+          <div id="associationList" class="association-list">
+            <div class="placeholder">Carica entrambi i mapping per vedere le associazioni.</div>
+          </div>
           </div>
 
           <button id="importBtn" class="primary" disabled>Invia import</button>
