--- a/index.html
+++ b/index.html
@@ -118,6 +118,24 @@
       </section>
     </main>
 
+    <div id="inspectModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="inspectTitle">
+      <div class="modal-card">
+        <div class="modal-header">
+          <h3 id="inspectTitle">Dettagli backup</h3>
+          <button id="inspectCloseBtn" class="ghost">Chiudi</button>
+        </div>
+        <div id="inspectMeta" class="modal-meta"></div>
+        <div class="modal-section">
+          <h4>Telecamere</h4>
+          <div id="inspectCameras" class="modal-list"></div>
+        </div>
+        <div class="modal-section">
+          <h4>Recap contenuto</h4>
+          <div id="inspectSummary" class="modal-summary"></div>
+        </div>
+      </div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
