feat: update base URL input default value to localhost and refactor import handling for dynamic keys

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Base URL</h2>
         <div class="field">
           <label for="baseUrl">Base URL</label>
-          <input id="baseUrl" type="text" placeholder="https://example.com" value="https://V01260012.lan.omniaweb.cloud" />
+          <input id="baseUrl" type="text" placeholder="https://localhost" value="https://localhost" />
         </div>
         <div class="grid">
           <div class="field">
