--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Base URL</h2>
         <div class="field">
           <label for="baseUrl">Base URL</label>
-          <input id="baseUrl" type="text" placeholder="https://localhost" value="https://localhost" />
+          <input id="baseUrl" type="text" placeholder="https://VXXXX.lan.omniaweb.cloud" value="https://VXXXX.lan.omniaweb.cloud" />
         </div>
         <div class="grid">
           <div class="field">
